--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site Info
-title:              "The Plain"
+title:              "Jingyuan (Leo) Chen"
 description:        "A minimalist Jekyll theme"
-author_name:        "Heiswayi Nrird" # change this to your name
+author_name:        "Leo" # change this to your name
 logo_url:           https://avatars0.githubusercontent.com/u/13794983?v=4 # Get it from GitHub API: https://api.github.com/users/<username>
 
 # Site Settings
-url:                https://heiswayi.github.io # main url
-baseurl:            /the-plain
+url:                https://leochanj105.github.io # main url
+baseurl:            ""
 permalink:          /:title # Post permalink
 timezone:           Asia/Kuala_Lumpur # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 mathjax:            true  # enables support for mathjax - set to 'false' to disable
@@ -26,7 +26,7 @@ exclude:            [ "LICENSE", "README.md", "CNAME", "vendor", "Gemfile", "scr
 plugins:
   - jekyll-sitemap
 
-
+theme: the-plain
 
 defaults:
   -
