--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ logo_url:           https://avatars0.githubusercontent.com/u/13794983?v=4 # Get 
 # Site Settings
 url:                https://leochanj105.github.io # main url
 baseurl:            ""
+github_repo: "https://github.com/leochanj105/leochanj105.github.io"
 permalink:          /:title # Post permalink
 timezone:           Asia/Kuala_Lumpur # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 mathjax:            true  # enables support for mathjax - set to 'false' to disable
@@ -25,8 +26,9 @@ include:            [ "robots.txt" ]
 exclude:            [ "LICENSE", "README.md", "CNAME", "vendor", "Gemfile", "script" ]
 plugins:
   - jekyll-sitemap
+  - jekyll-remote-theme
 
-theme: the-plain
+remote_theme: heiswayi/the-plain
 
 defaults:
   -
