--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Info
 title:              "Jingyuan (Leo) Chen"
 description:        "A minimalist Jekyll theme"
-author_name:        "Leo" # change this to your name
+author_name:        "Leo Chen" # change this to your name
 logo_url:           https://avatars0.githubusercontent.com/u/13794983?v=4 # Get it from GitHub API: https://api.github.com/users/<username>
 
 # Site Settings
@@ -9,7 +9,7 @@ url:                https://leochanj105.github.io # main url
 baseurl:            ""
 github_repo: "https://github.com/leochanj105/leochanj105.github.io"
 permalink:          /:title # Post permalink
-timezone:           Asia/Kuala_Lumpur # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone:           America/New_York # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 mathjax:            true  # enables support for mathjax - set to 'false' to disable
 social_share_previews: true
 
