--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site Info
-title:              "Jingyuan (Leo) Chen"
+title:              "Personal"
 description:        "A minimalist Jekyll theme"
 author_name:        "Leo Chen" # change this to your name
 logo_url:           https://leochanj105.github.io/assets/face.jfif # Get it from GitHub API: https://api.github.com/users/<username>
@@ -7,7 +7,7 @@ logo_url:           https://leochanj105.github.io/assets/face.jfif # Get it from
 # Site Settings
 url:                https://leochanj105.github.io # main url
 baseurl:            ""
-github_repo: "https://github.com/leochanj105/leochanj105.github.io"
+github_repo:        "https://github.com/leochanj105/leochanj105.github.io"
 permalink:          /:title # Post permalink
 timezone:           America/New_York # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 mathjax:            true  # enables support for mathjax - set to 'false' to disable
